--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         Includes tested features such as navigation, image rendering, form validation, 
         and database integration. 
       </p>
-      <p><a href="#">View Project</a></p>
+      <p><a href="https://github.com/alien978/capture_moments">View Project</a></p>
     </div>
 
     <div class="project">
@@ -58,7 +58,7 @@
         Features role-based dashboards and tested workflows including login, job posting, 
         and applications with manual and API testing.
       </p>
-      <p><a href="#">View Project</a></p>
+      <p><a href="https://github.com/alien978/Web-Job-portal">View Project</a></p>
     </div>
 
   </section>
