--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="#">alkagurung119@gmail.com</a></p>
-    <p>GitHub: <a href="#">github.com/alien978</a></p>
-    <p>LinkedIn: <a href="#">linkedin.com/in/alka-gurung-4b315b338</a></p>
+    <p>Email: <a href="mailto:alkagurung119@gmail.com">alkagurung119@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/alien978">Alka Gurung</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/">Alka Gurung</a></p>
   </section>
 
 </body>
