--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Alka Gurung | Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -77,9 +78,9 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer">alkagurung119@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer">Alka Gurung</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer">Alka Gurung</a></p>
+    <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> alkagurung119@gmail.com</a><br>
+    <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Alka Gurung</a><br>
+    <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> Alka Gurung</a>
   </section>
 
 </body>
