--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> alkagurung119@gmail.com</a><br>
-    <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Alka Gurung</a><br>
-    <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> Alka Gurung</a>
+    <div class="icons">
+      <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    </div>
   </section>
 
 </body>
