--- a/index.html
+++ b/index.html
@@ -10,80 +10,80 @@
 </head>
 <body>
 
+  <!-- Navigation -->
+  <nav id="main-nav">
+    <a href="#hero">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
   <!-- Hero Section -->
   <section id="hero">
-    <h1>Hi, I'm Alka Gurung</h1>
-    <p>3rd-year BSc IT Student | Exploring QA, Web Development, and Creative Coding</p>
+    <div class="content">
+      <h1>Hi, I'm Alka Gurung</h1>
+      <p>3rd-year BSc IT Student | Exploring QA, Web Development, and Creative Coding</p>
+      <a href="Alka_Gurung_Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">View Resume</a>
+    </div>
   </section>
 
   <!-- About Section -->
   <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I’m a Computer Systems Engineering student from Nepal, passionate about building and testing 
-      applications that blend functionality with creativity. I enjoy experimenting with code to tell 
-      stories — whether that’s through a web app, a design accent, or unique animations. My current 
-      focus is developing my skills in QA, web technologies, and creative projects as I prepare for 
-      my first internship.
-    </p>
-  </section>
-
-  <!-- Skills Section -->
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Web Development: HTML, CSS, JavaScript, PHP, SQL</li>
-      <li>Programming: Python, Java (beginner level)</li>
-      <li>Quality Assurance: Manual Testing, Test Case Design, Bug Reporting</li>
-      <li>Tools: Git/GitHub, Postman, CI/CD basics</li>
-    </ul>
+    <div class="content">
+      <h2>About Me</h2>
+      <p>
+        I’m a Computer Systems Engineering student from Nepal, passionate about building and testing 
+        applications that blend functionality with creativity. I enjoy experimenting with code to tell 
+        stories — whether that’s through a web app, a design accent, or unique animations. My current 
+        focus is developing my skills in QA, web technologies, and creative projects as I prepare for 
+        my first internship.
+      </p>
+    </div>
   </section>
 
   <!-- Projects Section -->
   <section id="projects">
-    <h2>Projects</h2>
+    <div class="content">
+      <h2>Projects</h2>
 
-    <div class="project">
-      <h3>Captured Moments Photography Website</h3>
-      <p>
-        A photography portfolio website built using HTML, CSS, JS, and PHP with MySQL. 
-        Includes tested features such as navigation, image rendering, form validation, 
-        and database integration. 
-      </p>
-      <p><a href="https://github.com/alien978/capture_moments" target="_blank" rel="noopener noreferrer">View Project</a></p>
+      <div class="project">
+        <h3>Captured Moments Photography Website</h3>
+        <p>
+          A photography portfolio website built using HTML, CSS, JS, and PHP with MySQL. 
+          Includes tested features such as navigation, image rendering, form validation, 
+          and database integration. 
+        </p>
+        <p><a href="https://github.com/alien978/capture_moments" target="_blank" rel="noopener noreferrer">View Project</a></p>
+      </div>
+
+      <div class="project">
+        <h3>Web-Job-Portal Application</h3>
+        <p>
+          A job portal developed with Node.js, Express.js, EJS, and SQL. 
+          Features role-based dashboards and tested workflows including login, job posting, 
+          and applications with manual and API testing.
+        </p>
+        <p><a href="https://github.com/alien978/Web-Job-portal" target="_blank" rel="noopener noreferrer">View Project</a></p>
+      </div>
+
     </div>
-
-    <div class="project">
-      <h3>Web-Job-Portal Application</h3>
-      <p>
-        A job portal developed with Node.js, Express.js, EJS, and SQL. 
-        Features role-based dashboards and tested workflows including login, job posting, 
-        and applications with manual and API testing.
-      </p>
-      <p><a href="https://github.com/alien978/Web-Job-portal" target="_blank" rel="noopener noreferrer">View Project</a></p>
-    </div>
-
-  </section>
-
-  <!-- Education Section -->
-  <section id="education">
-    <h2>Education</h2>
-    <p>
-      <strong>BSc IT (Computer Systems Engineering)</strong><br>
-      ISMT College, Butwal (University of Sunderland)<br>
-      2023 – Present
-    </p>
   </section>
 
   <!-- Contact Section -->
   <section id="contact">
-    <h2>Contact</h2>
-    <div class="icons">
-      <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    <div class="content">
+      <h2>Contact</h2>
+      <div class="icons">
+        <a href="mailto:alkagurung119@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/alien978" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/alka-gurung-4b315b338/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      </div>
     </div>
   </section>
+  <footer id="footer">
+  <p>© 2025 Alka Gurung. All rights reserved.</p>
+</footer>
+
 
 </body>
 </html>
