--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Includes tested features such as navigation, image rendering, form validation, 
           and database integration. 
         </p>
-        <p><a href="https://github.com/alien978/capture_moments" target="_blank" rel="noopener noreferrer">View Project</a></p>
+        <p><a href="https://github.com/alien978/capture_moments" target="_blank" rel="noopener noreferrer">Captured Moments</a></p>
       </div>
 
       <div class="project">
@@ -63,7 +63,7 @@
           Features role-based dashboards and tested workflows including login, job posting, 
           and applications with manual and API testing.
         </p>
-        <p><a href="https://github.com/alien978/Web-Job-portal" target="_blank" rel="noopener noreferrer">View Project</a></p>
+        <p><a href="https://github.com/alien978/Web-Job-portal" target="_blank" rel="noopener noreferrer">Web-Job-Portal</a></p>
       </div>
 
     </div>
