styling nav section

--- a/index.html
+++ b/index.html
@@ -21,28 +21,50 @@
   <a href="#contact" title="Contact"><i class="fas fa-envelope"></i><span>Contact</span></a>
 </nav>
 
-  <!-- Hero Section -->
-  <section id="hero">
-    <div class="content" data-aos="fade-up">
-      <h1>Hi, I'm Alka Gurung</h1>
-      <p>3rd-year BSc IT Student | Exploring QA, Web Development, and Creative Coding</p>
-      <a href="Alka_Gurung_Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">View Resume</a>
-    </div>
-  </section>
+<!-- Hero Section -->
+<section id="hero">
+  <div class="content" data-aos="fade-up">
+    <h1>Code. Create. Captivate.</h1>
+    <p>
+      I'm Alka Gurung, a 3rd-year BSc IT student exploring 
+      full-stack development and 3D animation. 
+      I look forward to transforming ideas into digital realities as I prepare 
+      for my first big step into the industry.
+    </p>
+    <a href="Alka_Gurung_Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">
+      View Resume
+    </a>
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section id="about">
     <div class="content" data-aos="zoom-in">
-      <h2>About Me</h2>
-      <p>
-        I’m a Computer Systems Engineering student from Nepal, passionate about building and testing 
-        applications that blend functionality with creativity. I enjoy experimenting with code to tell 
-        stories — whether that’s through a web app, a design accent, or unique animations. My current 
-        focus is developing my skills in QA, web technologies, and creative projects as I prepare for 
-        my first internship.
-      </p>
-    </div>
-  </section>
+<!-- About Me Section -->
+<section id="about">
+  <div class="content" data-aos="fade-up">
+    <h2>About Me</h2>
+    <p>
+      I'm <strong>Alka Gurung</strong>, a <strong>3rd-year BSc IT student</strong> from Nepal, preparing for my final year and seeking my first internship opportunity.
+    </p>
+    <p>
+      Through my coursework and projects, I've explored the fundamentals of 
+      programming, databases, networking, 
+      web development, security, and cloud technologies. 
+      While my hands-on experience mainly comes from assignments, they've given me a solid foundation, 
+      and I'm now focused on sharpening my skills to become a full-stack developer.
+    </p>
+    <p>
+      Beyond academics, I'm passionate about art and creativity. 
+      I've recently started learning 3D design and animation using Blender, 
+      aiming to blend my technical background with visual storytelling. 
+      My goal is to grow as both a developer and a creative designer, 
+      building projects where code meets creativity.
+    </p>
+  </div>
+</section>
+
 
   <!-- Projects Section -->
   <section id="projects">
