--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <p>
       I'm Alka Gurung, a 3rd-year BSc IT student exploring 
       full-stack development and 3D animation. 
-      I look forward to transforming ideas into digital realities as I prepare 
-      for my first big step into the industry.
+      Excited to transform ideas into digital realities and take my first step into the tech industry.
     </p>
     <a href="Alka_Gurung_Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">
       View Resume
@@ -41,12 +40,9 @@
   <!-- About Section -->
   <section id="about">
     <div class="content" data-aos="zoom-in">
-<!-- About Me Section -->
-<section id="about">
-  <div class="content" data-aos="fade-up">
     <h2>About Me</h2>
     <p>
-      I'm <strong>Alka Gurung</strong>, a <strong>3rd-year BSc IT student</strong> from Nepal, preparing for my final year and seeking my first internship opportunity.
+      I'm Alka Gurung, a 3rd-year BSc IT student from Nepal, preparing for my final year and seeking my first internship opportunity.
     </p>
     <p>
       Through my coursework and projects, I've explored the fundamentals of 
